Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignBoolObjNumObj.quorum
class main
    action Main
        Number n
        Boolean bool
        n:SetValue(7.5)
        bool = cast(Boolean, n)
    end
end